--- a/package.json
+++ b/package.json
@@ -1,23 +1,12 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
-  "license": "",
   "engines": {
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "node server/server"
+    "start": "node server"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.7"
-  },
-  "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "express": "^4.17.1"
   }
 }
